[package]
name = "automarathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
poise = "0.5.5"
clap = { version = "4.0.15", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
obws = "0.12.0"
reqwest = { version = "0.11", features = ["json"]}
tokio-tungstenite = { version = "*", features = ["native-tls"]}
url = "2.4"
warp = "0.3"
env_logger = "0.10.0"
log = "0.4.19"
anyhow = "1.0.75"
thiserror = "1.0.50"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros", "json", "time"]}
