[package]
name = "automarathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
poise = "0.6.1"
songbird = { version = "0.5.0", default-features = true, features = ["receive"] }
cpal = { version = "0.15.3", features = ["jack"] }
ringbuf = "0.4.8"
async-ringbuf = "0.3.4"
clap = { version = "4.0.15", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls"]}
tokio-stream = { version = "0.1.17", features = ["sync"]}
futures = "0.3.24"
obws = "0.12.0"
reqwest = { version = "0.11", features = ["json"]}
rustls = { version = "0.23.0", default-features = true }
url = "2.4"
warp = "0.3.7"
env_logger = "0.10.0"
log = "0.4.19"
anyhow = "1.0.75"
thiserror = "1.0.50"
regex = "1.10.5"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros", "json", "time"]}
realfft = "3.4.0"
vite-rs = "0.1.0"
statrs = { version = "0.18.0", features = ["rand"] }
rand = "0.8.5"
